--- a/src/index.scss
+++ b/src/index.scss
@@ -12,13 +12,14 @@
 }
 body {
   margin: 0;
-  font-family: systemui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "IBM Plex Sans", systemui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #202020;
+  background-color: #202124;
   color: #61dafb;
+  font-weight: normal;
 }
 .container {
   height: 100vh;
@@ -26,11 +27,17 @@ body {
   align-items: center;
   justify-content: center;
 }
-.price {
+.block {
   padding: 1rem;
   border-radius: 0.5rem;
-  font-weight: 600;
-  background-color: #333;
+  background-color: #303134;
+}
+.ticker {
+  font-weight: normal;
+  margin-bottom: 0.5rem;
+}
+.price {
+  font-weight: 700;
 }
 .up {
   color: var(--green);
